--- a/docs/devbook/linux/1.md
+++ b/docs/devbook/linux/1.md
@@ -77,7 +77,7 @@ Tất cả nội dung sau đây, đều dựa vào `Bash`, các loại `shell` s
 
 Bạn có thể sử dụng bàn phím của `VIM` trong `Bash` bằng lệnh
 
-```shell:no-line-numbers
+```bash:no-line-numbers
 set -o vi
 ```
 
