--- a/docs/devbook/linux/2.md
+++ b/docs/devbook/linux/2.md
@@ -2,50 +2,76 @@
 
 ## 1. Xác định bản phân phối Linux
 
-Sử dụng lệnh `lsb_release -a` để xác distro đang sử dụng
+Có rất nhiều cách và có những nhánh `Linux` sẽ không phù hợp cách này và cách kia
 
-> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-22-48-25-Screenshot%202022-02-13%20224813.png" title="" alt="Screenshot 2022-02-13 224813.png" width="340">
+- Lệnh `lsb_release -a` (*phù hợp với nhánh `Debian`*)
+  
+  <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-22-48-25-Screenshot%202022-02-13%20224813.png" alt="Screenshot 2022-02-13 224813.png" width="334">
 
-::: warning ⚠️ CHÚ Ý
+- Lệnh `cat /etc/issue` (*sử dụng khi lệnh trên không* **khả dụng**)
+  
+  <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-22-51-01-Screenshot%202022-02-13%20225049.png" alt="Screenshot 2022-02-13 225049.png" width="319">
+  
+  ::: warning ⚠️ CHÚ Ý
+  
+  Các nhánh `Redhat` như `Fedora`, `centOS`, `RHEL` sẽ không khả dụng
+  
+  Mà phải sử dụng lệnh `cat /etc/redhat-release`
+  
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-23-41-42-Screenshot%202022-02-13%20234117.png" title="" alt="Screenshot 20220213 234117png" width="404">
+  
+  :::
 
-Nếu lệnh `lsb_release` không khả dụng  in thông tin của `/etc/issue` có chứa thông tin về bản `Linux` như sau:
+- Lệnh `cat /etc/os-release` (*khả dụng hầu hết `ditro linux`*) bằng cách xác định `systemd-based`
+  
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-23-20-13-Screenshot%202022-02-13%20231941.png" title="" alt="Screenshot 2022-02-13 231941.png" width="353">
+  
+  ::: tip 💡MẸO
+  
+  Có thể việc hiển thị trong `/etc/os-release` quá nhiều, bạn chỉ cần tên của `distro Linux` hãy làm như sau:
+  
+  ```bash:no-line-numbers
+  $ source /etc/os-release && echo "$PRETTY_NAME"
+  ```
+  
+  > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-23-25-49-Screenshot%202022-02-13%20232509.png" title="" alt="Screenshot 20220213 232509png" width="387">
+  
+  :::
 
-> <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-22-51-01-Screenshot%202022-02-13%20225049.png" alt="Screenshot 2022-02-13 225049.png" width="304">
-> 
-> ==> Hệ điều hành `Kali Linux`
+- Lệnh `cat /etc/*-release` sử dụng cho tất cả `distro-linux`
 
-Tuy nhiên trong các distro nhánh `Redhat` như `Fedora`, `centOS`, `RHEL` sẽ hiển thị thất bại như sau:
+## 2. Hiển thị thông tin hệ thống
 
-> <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-23-40-05-Screenshot%202022-02-13%20233953.png" alt="Screenshot 2022-02-13 233953.png" width="325">
-
-==> Thông tin nằm ở `/etc/redhat-release`
-
-> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-23-41-42-Screenshot%202022-02-13%20234117.png" title="" alt="Screenshot 2022-02-13 234117.png" width="432">
-
-:::
-
-## 2. Xác định systemd-based
-
-Phương pháp này sẽ hoạt động  gần như mọi `distro Linux` 
-
-> Dùng nó dự phòng cho các distro cũ
-
-Thực hiện gõ lệnh `cat /etc/os-release` để xem thông tin `Linux` đang sử dụng:
-
-> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-23-20-13-Screenshot%202022-02-13%20231941.png" title="" alt="Screenshot 2022-02-13 231941.png" width="367">
-
-::: tip 💡MẸO
-
-Có thể việc hiển thị trong `/etc/os-release` quá nhiều, bạn chỉ cần tên của `distro Linux` hãy làm như sau:
+Sử dụng lệnh `uname` (**U**nix **name**)  để hiển thị thông tin hệ điều hành
 
 ```bash:no-line-numbers
-$ source /etc/os-release && echo "$PRETTY_NAME"
+$ uname <tuỳ chọn>
 ```
 
-> <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/13-23-25-49-Screenshot%202022-02-13%20232509.png" alt="Screenshot 2022-02-13 232509.png" width="423">
+| Tuỳ chọn                  | Chức năng                                                  |
+| ------------------------- | ---------------------------------------------------------- |
+| -a<br>--all               | In ra tất cả thông tin cơ bản về hệ điều hành              |
+| -s<br>--kernel-name       | In ra tên `kernel`                                         |
+| -n<br>--nodename          | In ra tên `network hostname`                               |
+| -r<br>--kernel-release    | In ra `kernel-release`                                     |
+| -v<br>--kernel-version    | In ra phiên bản `kernel`                                   |
+| -m<br>--machine           | In ra tên phần cứng máy (*có thể hiển thị `unknown`*)      |
+| -p<br>--process           | In ra tên **CPU** (*có thể hiển thị `unknown`*)            |
+| -i<br>--handware-platform | In ra tên nền tảng phần cứng (*có thể hiển thị `unknown`*) |
+| -o<br>--operation-system  | In ra hệ điều hành                                         |
 
-:::
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/14-10-02-21-Screenshot%202022-02-14%20100210.png" title="" alt="Screenshot 2022-02-14 100210.png" width="612">
 
-## 3. Hiển thị thông tin hệ thống
+:::  tip 🤔 GIẢI THÍCH
 
-## 4.  Sử dụng GNU coreutils
+Như bạn có thể thấy bên trên:
+
+- `zenfection-VirtualBox` là tên máy tính
+
+- `5.11.9-40-generic` là tên kiến trúc `kernel`
+
+- `#44~20.04.2-Ubuntu SMP` cho biết ta đang sử dụng `Ubuntu 20.04.2`
+
+- Và các thông tin cuối là thông tin cơ bản
+
+:::   
