--- a/docs/devbook/linux/3.md
+++ b/docs/devbook/linux/3.md
@@ -1,1 +1,137 @@
-# Bài 3: 
+# Bài 3: Shell
+
+## 1. Thay đổi shell mặc định
+
+Hầu hết các distro đều sử dụng `BASH` (**B**ource **A**gain **Sh**ell) làm `shell` mặc định, tuy nhiên có rất nhiều `shell` khác như: `ZSH`, `FISH`....
+
+Ta sử dụng lệnh `chsh` với một số tuỳ chọn sau:
+
+| Tuỳ chọn | Chức năng                       |
+| -------- | ------------------------------- |
+| -s       | Đặt lại `shell` mặc định        |
+| -l       | Danh sách các `shell` trong máy |
+| -h       | Hỗ trợ sử dụng                  |
+| -v       | Hiển thị phiên bản              |
+
+- Lệnh `chsh -l` để hiển thị danh sách cách `shell` trong máy
+  
+  ```bash:no-line-numbers
+  $ chsh -l
+  > /bin/sh
+  > /bin/bash
+  > /sbin/nologin
+  > /usr/bin/sh
+  > /usr/bin/bash
+  > /usr/sbin/nologin
+  > /usr/bin/fish
+  ```
+  
+  ::: warning ⚠️ LƯU Ý
+  
+  Nếu lệnh `chsh -l` không khả dụng hãy sử dụng lệnh `cat /etc/shells`
+  
+  :::
+
+- Lệnh `chsh -s` để chuyển `shell` mặc định
+  
+  ```bash:no-line-numbers
+  $ chsh -s /usr/bin/fish
+  > Changing shell for user
+  > Shell changed
+  ```
+  
+  > 🤔Nếu bạn chỉ muốn đổi `shell` cho người dùng `newUser` làm như sau:
+  > 
+  > ```bash:no-line-numbers
+  > $ chsh -s /usr/bin/fish newUser
+  > ```
+  
+  ==> Có thể sử dụng lệnh `echo $SHELL` để kiểm tra
+
+::: tip 💡GHI NHỚ
+
+- `Shell` cũng được gọi là `CLI` (*Command Line Interface*) - giao diện dòng lệnh
+
+- Nếu bạn muốn sử dụng `shell` nào chỉ cần cài đặt nó bằng lệnh:
+  
+  ```bash
+  $ sudo apt-get install <shell_name>
+  ```
+
+:::
+
+## 2. Các tiện ích bash shell
+
+### Thay đổi hiển thị prompt
+
+Mặc định thì `prompt` khá dài, nếu bạn muốn thay đổi hãy sử dụng `PS1` trong với các tuỳ chọn dưới đây
+
+> Đây là ví dụ mặc định:
+> 
+> ![Screenshot 2022-02-14 114618.png](https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/14-11-46-33-Screenshot%202022-02-14%20114618.png)
+
+| Tuỳ chọn                 | Chức năng                                                | Hiển thị                     |
+| ------------------------ | -------------------------------------------------------- | ---------------------------- |
+| PS1='\w$'                | Đường dẫn thư mục                                        | `/mnt/c/Users/zen`\$         |
+| PS1='\h\$'               | Hostname                                                 | `Latitude-5501`$             |
+| PS1='\u\$'               | Username                                                 | `zenfection`$                |
+| PS1='\t\$'<br>PS1='\@\$' | Thời gian định dạng 24 giờ<br>Thời gian định dạng 12 giờ | `11:49:18`$<br> `11:49 AM`\$ |
+| PS1='!\$'                | Số câu lệnh đã dùng                                      | `131`$                       |
+| PS1='dude\$'             | Tên định sẵn                                             | `dude`$                      |
+
+### Dòng lệnh cơ bản
+
+Một số `shortcut` cơ bản đã được trình bày trong `Bài 1: GNU/Linux`
+
+Bổ sung thêm các lệnh truy cập lịch sử sau:
+
+| Lệnh                                  | Chức năng                                                                         |
+| ------------------------------------- | --------------------------------------------------------------------------------- |
+| \~/.bash\_history                     | Danh sách `500` lệnh gần nhất đã dùng                                             |
+| history<br>history \| grep `key_word` | Hiển thị các câu lệnh đã dùng<br>Hiển thị các câu lệnh đã dùng có chứa `key_word` |
+
+### Tạo lệnh bằng Alias
+
+Bạn sử dụng hằng ngày một câu lệnh dài, và bạn muốn rút ngắn nó lại theo cách riêng của bạn, hãy sử dụng lệnh `Alias` với cú pháp
+
+```bash:no-line-numbers
+$ alias tên_tự_đặt = 'câu lệnh'
+# Ví dụ
+$ alias update = 'sudo apt-get update'
+```
+
+Khi bạn gõ `update` thì `shell` sẽ tự hiểu là `sudo apt-get update`
+
+::: tip 💡KIẾN THỨC
+
+Các cấu hình của `alias` nằm ở file `.bash-aliased` trong thư mục `home` 
+
+```bash:no-line-numbers
+$ cat ~/.bash-aliased #hiển thị các alias đã cấu hình
+```
+
+:::
+
+### Xác định file trong hệ thống
+
+Như bạn được biết, để tìm kiếm file ta sử dụng lệnh `find` nhưng lệnh `locate` còn có thể tìm kiếm nhanh hơn rất nhiều
+
+Bạn có thể cài đặt nó với tên gói là `mlocate`
+
+::: tip 💡 CÁCH HOẠT ĐỘNG
+
+Lệnh `locate` tìm kiếm thông qua cơ sở dữ liệu đã được cập nhật thông qua lệnh `updatedb`
+
+> Khi bạn cài đặt `mlocate`, lệnh `updatedb` sẽ được chạy mỗi `24h`
+> 
+> Nếu bạn cập nhật thủ công sẽ có hơi mất thời gian
+
+<img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/14-12-07-03-Screenshot%202022-02-14%20120654.png" alt="Screenshot 2022-02-14 120654.png" width="600">
+
+:::
+
+::: warning ⚠️ LƯU Ý
+
+Lệnh `locate` tuy nhanh và mạnh hơn, nhưng vẫn còn thiếu nhiều tính năng của lệnh `find`
+
+:::
