--- a/docs/devbook/linux/1.md
+++ b/docs/devbook/linux/1.md
@@ -114,17 +114,54 @@ user@host /home/user/somedir/ $
 | cd \~<br>cd | Đến đường dẫn thư mục `/home/user`     |
 | cd ..       | Đến thư mục cha của đường dẫn hiện tại |
 
-### Hiển thị tập tin
+### Hiển thị file và thư mục
 
-| Lệnh                      | Chức năng                                                                                                                    |
-| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
-| ls -l<br>ls -l *dir_name* | Hiển thị tất cả `file/directory` bên trong thư mục hiện tại<br>Hiển thị tất cả `file/directory` bên trong thư mục `dir_name` |
-| ls -a                     | Hiển thị tất cả `file/directory` (bao gồm cả `file ẩn`)                                                                      |
-| ls -F                     | Thêm vào sau dấu các dấu<br>`*` là file thực thi<br>`@` là *symbolic link*<br>`\|` là *pipe*<br>`>` là *door*                |
-| ls -lt                    | Hiển thị sắp xếp theo thời gian chỉnh sửa gần nhất<br>(*tuỳ chọn `-l` cho bạn cái nhìn cụ thể hơn*)                          |
-| ls -lh                    | Hiển thị kích thước file đọc được (*như `10M`...*)                                                                           |
-| ls -lR                    | Hiển thị tất cả file và thư mục bên trong nó (*đệ quy*)                                                                      |
-| tree                      | Ứng dụng cho phép hiển thị các file và thư mục theo dạng cây                                                                 |
+Sử dụng lệnh `ls` để hiển thị các thông tin của file và thư mục kèm theo các tuỳ chọn sau:
+
+::: tip 💡 MẸO
+
+Hiển thị danh sách bằng lệnh `ls`, bạn sẽ thấy các màu khác nhau, nó được quy định như sau:
+
+- **Xanh dương**  ➟ thư mục
+
+- **Xanh lá cây** ➟ file thực thi *hoặc* file data
+
+- **Màu xanh da trời** (*Cyan*) ➟ file `symbolic link`
+
+- **Màu vàng nền đen** ➟ Device
+
+- **Màu hồng** ➟ file `graphic image`
+
+- **Màu đỏ** ➟ file nén
+
+- **Màu đỏ nền đen** ➟ liên kết hỏng
+
+Công cụ `tree` cho phép hiển thị các `file/directory` theo dạng cây  
+
+:::
+
+#### Lệnh cơ bản
+
+| Lệnh                                 | Chức năng                                                                                                     |
+| ------------------------------------ | ------------------------------------------------------------------------------------------------------------- |
+| ls -a                                | Danh sách `file/directory` (bao gồm cả `file ẩn`)                                                             |
+| ls --color=<br>[*always/never/auto*] | Đặt lại hiển thị màu (`never` là không hiện màu)                                                              |
+| ls -F                                | Thêm vào sau dấu các dấu<br>`*` là file thực thi<br>`@` là *symbolic link*<br>`\|` là *pipe*<br>`>` là *door* |
+| ls -l<br>                            | Danh sách cụ thể `file/directory`                                                                             |
+| ls -r                                | Danh sách `file/directory` sắp xếp ngược                                                                      |
+| ls -R                                | Danh sách đệ quy các `file/directory` bên trong                                                               |
+| ls -s<br>ls -S                       | Danh sách kích thước `file/directory`<br>Danh sách kích thước `file/directory` đã sắp xếp                     |
+| ls -t                                | Danh sách `file/directory` sắp xếp theo ngày tháng                                                            |
+| ls -X                                | Danh sách `file/directory` sắp xếp theo tên tiện ích                                                          |
+
+#### Lệnh kết hợp
+
+| Lệnh   | Chức năng                                               |
+| ------ | ------------------------------------------------------- |
+| ls -la | Danh sách cụ thể `file/directory` bao gồm **ẩn**        |
+| ls -lh | Danh sách kích thước file đọc được (*như `10M`...*)     |
+| ls -lt | Danh sách sắp xếp theo thời gian chỉnh sửa gần nhất<br> |
+| ls -lR | Hiển thị tất cả file và thư mục bên trong nó (*đệ quy*) |
 
 ### Tạo / sao chép / xoá
 
