--- a/docs/devbook/linux/5.md
+++ b/docs/devbook/linux/5.md
@@ -1,9 +1,127 @@
-# Bài 5:
+# Bài 5: Thông tin hệ thống
 
-| Theo  dõi | Lệnh                                                          |                                                                                        |
-| --------- | ------------------------------------------------------------- | -------------------------------------------------------------------------------------- |
-| CPU       | mpstat 2 10                                                   |                                                                                        |
-| RAM       | vmstat 2 5                                                    |                                                                                        |
-| Disk      | iostat -kx 5                                                  |                                                                                        |
-| Network   | netstat -ntlp<br>netstat -nulp<br>netstat -nxlp<br>sudo iftop | Mở socket `TCP`<br>Mở socket `UDP`<br>Mở socket `Unix`<br>Theo dõi mạng thời gian thực |
-|           |                                                               |                                                                                        |
+## 1. Thống kế CPU, RAM, Network, Disk
+
+Dưới đây là các lệnh cơ bản để thống kê và theo dõi thời gian thực các tài nguyên của máy tính: 
+
+| Thống kê | Lệnh                                                          | Chức năng                                                                                       |
+| -------- | ------------------------------------------------------------- | ----------------------------------------------------------------------------------------------- |
+| CPU      | mpstat                                                        | Thống kê sử dụng CPU                                                                            |
+| RAM      | vmstat                                                        | Thống kê sử dụng Memory Ram                                                                     |
+| Disk     | iostat                                                        | Thống kê sử dụng ổ cứng                                                                         |
+| Network  | netstat -ntlp<br>netstat -nulp<br>netstat -nxlp<br>sudo iftop | Mở socket `TCP`<br>Mở socket `UDP`<br>Mở socket `Unix`<br>Phần mềm theo dõi mạng thời gian thực |
+| Tất cả   | dstat                                                         | Phần mềm thống kế các thứ bên trên                                                              |
+
+::: warning ⚠️ LƯU Ý
+
+- `iftop` và `dstat` là một phần mềm vậy nên nếu không có sẵn thì bạn hãy cài nó
+
+- Tất cả lệnh dưới đây là cơ bản, hãy gõ `--help` để học cách sử dụng nó
+
+:::
+
+## 2. Thông tin CPU
+
+`CPU` là linh hồn cũng như sức mạnh của một máy tính, vậy nên biết được `CPU` ra sao, sẽ cho bạn biết máy tính bạn mạnh thế nào
+
+Có nhiều cách để biết được thông tin `CPU` trong `Linux`, hãy tham khảo các cách sau:
+
+### Lệnh lscpu
+
+Sử dụng lệnh `lscpu` (*list cpu*) để hiển thị các thông tin cơ bản của CPU đang sử dụng 
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-15-14-07-Screenshot%202022-02-15%20151357.png" title="" alt="Screenshot 2022-02-15 151357.png" width="508">
+> 
+> ....
+
+### Lệnh lshw
+
+Sử dụng lệnh `lshw` (*list hardware*) để hiển thị danh sách các phần cứng trong máy tính như `CPU`, `RAM`, `Disk`, `Mainboard`, `Firmware`....
+
+```bash:no-line-numbers
+$ sudo lshw | grep cpu    # in thông tin cpu
+```
+
+### Thông tin cpuinfo
+
+Thông tin `CPU` của máy được `Linux` lưu trữ ở `/proc/cpuinfo`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-15-35-33-Screenshot%202022-02-15%20153524.png" title="" alt="Screenshot 2022-02-15 153524.png" width="474">
+> 
+> ...
+
+::: tip 💡MẸO
+
+Để biết nhanh số nhân & luồng của `CPU` bao nhiêu ta dùng lệnh sau:
+
+```bash:no-line-numbers
+$ grep -c processor /proc/cpuinfo
+```
+
+:::
+
+## 3. Danh sách phần cứng
+
+Đôi khi chúng ta cần biết cần phần cứng như `USB`, `PCI` các thiết bị ngoại vi đã được `Linux` nhận hãy chưa, vì thế ta phải có lệnh kiểm tra nó
+
+| Phần cứng | Lệnh                                          |
+| --------- | --------------------------------------------- |
+| PCI       | lspci -tv                                     |
+| USB       | lsusb -tv                                     |
+| BIOS      | sudo dmidecode -q \| less                     |
+| Ổ cứng    | hdparm -i `đường dẫn`<br>(*ví dụ `/dev/sda`*) |
+
+> 🤔 Dưới đây là một số ví dụ nâng cao
+> 
+> | Lệnh                                | Chức năng                                                                           |
+> | ----------------------------------- | ----------------------------------------------------------------------------------- |
+> | smartctl -A /dev/sda Power_On_Hours | hiển thị thời gian hoạt động của ổ cứng `/dev/sda`                                  |
+> | hdparm -tT /dev/sda                 | Test tốc độ đọc ghi của ổ cứng `/dev/sda`                                           |
+> | badblocks -s /dev/sda               | Kiẻm tra xem ổ cứng `/dev/sda` có bị `badblock` không (*tức là không thể đọc được*) |
+
+## 4. Giám sát tiến trình và thu thập thông tin
+
+Chúng ta có để giám sát các tiến trình như sau:
+
+### Giám sát tĩnh
+
+Lệnh phổ biến nhất là `ps` (*process status*) để giám sát các thông tin về tiến trình đang chạy trên máy
+
+Dưới đây là một số tuỳ chọn phổ biến: 
+
+| Lệnh                                                          | Chức năng                                                   |
+| ------------------------------------------------------------- | ----------------------------------------------------------- |
+| ps -e -o pid,args --forest                                    | Danh sách tiến trình theo cấp bậc                           |
+| ps -e -o pcpu,cpu,cputime,args --sort pcpu \| sed '/^ 0.0 /d' | Danh sách tiến trình đã sắp xếp theo `%` sử dụng cpu        |
+| ps -e -orss=,args= \| sort -b -k1,1n \| pr -TW$COLUMNS        | Danh sách tiền trình đã sắp xếp theo `%` sử dụng ram (`KB`) |
+| ps -C firefox-bin -L -o pid,tid,pcpu,state                    | Hiển thị tất cả tiến trình có tên `firefox-bin` đang chạy   |
+
+Sau khi tìm thấy dc `PID` cụ thể bằng các lệnh trên, bạn có thể sử dụng lệnh sau để tra nó:
+
+```bash:no-line-numbers
+$ lsof -p <PID>
+```
+
+### Giám sát tương tác
+
+Là giám sát các tiến trình như `ps` và cập nhật theo thời gian thực
+
+Lệnh phổ biến nhất cho giám sát động là `top`: 
+
+> ![Screenshot 2022-02-15 181239.png](https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-18-12-48-Screenshot%202022-02-15%20181239.png)
+
+==> Tuy nhiên hiện nay có rất nhiều công cụ tốt hơn, một trong số đó là:
+
+#### htop
+
+> ![Screenshot 2022-02-15 181128.png](https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-18-12-12-Screenshot%202022-02-15%20181128.png)
+
+#### atop
+
+> ![Screenshot 2022-02-15 181142.png](https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-18-13-02-Screenshot%202022-02-15%20181142.png)
+
+#### iotop
+
+> ⚠️ Dùng ở quyền `root`
+> 
+> ![Screenshot 2022-02-15 181200.png](https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-18-13-26-Screenshot%202022-02-15%20181200.png)
