--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Thuchanh/1.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Thuchanh/1.md
@@ -56,7 +56,7 @@
 
 ::: tip 💡 GUIDE
 
-<div class="videZen">
+<div class="videoZen">
   <iframe src="https://www.youtube.com/embed/SDocmq1c05s?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 :::
