--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Thuchanh/2.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Thuchanh/2.md
@@ -1,1 +1,115 @@
 # Lab2
+
+## 1. Cấu hình địa chỉ IPv4
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/e1jbvyMeS5I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35">Sử dụng file `Lab02-01-IPv4 Addresses.pkt`, thực hiện:
+> 
+> - Cấu hình `hostname` cho `R1`
+> 
+> - Sử dụng lệnh `show`, hiển thị thông tin của các `interface` của `R1`
+> 
+> - Cấu hình địa chỉ `IP` phù hợp cho các `interface` của `R1` và bật các `interface` đó lên.
+> 
+> - Cấu hình các mô tả cho các `interface`
+> 
+> - Sử dụng lệnh `show` để hiển thị các thông tin các `interface` của `R1`
+> 
+> - Hiển thị `running configuration` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+> 
+> - Cấu hìnhh địa chỉ `IP` cho `PC1`, `PC2`, `PC3`
+> 
+> - Từ `PC1` ping tới `PC2` và `PC3` để kiểm tra nối kết (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+
+## 2. Cấu hình interface của switch và router
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/rzDb5DoBKRk?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35"> Sử dụng file `Lab02-02-Interface Configuration.pkt`, thực hiện:
+> 
+> - Cấu hình `hostname` cho `R1`, `SW1`, `SW2`
+> 
+> - Cấu hình địa chỉ `IP` phù hợp cho `R1`, `PC1`, `PC2`, `PC3`, `PC4`
+> 
+> - Cấu hình tốc độ và chế độ `duplex` cho các `interface` nối kết các thiết bị mạng khác (*`switch`, `router` KHÔNG phải `PC`*)
+> 
+> - Cấu hình mô tả phù hợp cho mỗi `interface`
+> 
+> - Tắt các `interface` không nối kết tới các thiết bị khác
+> 
+> - Hiển thị `running configuation` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+
+## 3. Cấu hình vạch đường tĩnh (*static route*)
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/XHxOtIav2k8?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35">Sử dụng file `Lab02-03-Configuring Static Routes.pkt`, thực hiện
+> 
+> - Cấu hình `PC` và `router` theo sơ đồ mạng (*không cần cấu hình các `switch`*).
+>   
+>   ::: warning ⚠️ LƯU Ý
+>   
+>   Cấu hình `gateway` cho các `PC`
+>   
+>   :::
+> 
+> - Cấu hình vạch đường tĩnh (*static route*) cho các `router` sao cho `PC1` có thể ping thành công tới `PC2` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+> 
+> - Hiển thị `running configuration` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+
+## 4. Xử lý lỗi trong cấu hình vạch đường tĩnh
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/3z8YGEVFTiA?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35">Sử dụng file `Lab02-04-Troubleshooting Static Routes.pkt`, thực hiện:
+> 
+> - Hiện tại `PC1`, `PC2` không thể ping được nhau bởi vì cấu hình sai trên mỗi `router`. Tìm các cấu hình sai và sửa chúng để cho `PC1`, `PC2` có thể ping được nhau
+> 
+> - Hiển thị `running configuration` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+
+## 5. VLSM
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/Rn_E1Qv8--I?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35">Sử dụng file `Lab02-05-VLSM.pkt`, thực hiện:
+> 
+> - Chia mạng con cho nhánh mạng `192.168.5.0/24` để có thể cung cấp đủ địa chỉ cho các `LAN` và nối kết giữa `R1` và `R2`
+> 
+> - Lấy địa chỉ `IP` khả dụng đầu tiên của mỗi mạng cấu hình cho `PC` trog mỗi `LAN`
+> 
+> - Lấy địa chỉ `IP` khả dụng cuối cùng của mỗi mạng con cấu hih2 cho `interface` của `router` trong mỗi `LAN`
+> 
+> - Cấu hình vạch đường tĩnh cho mỗi `router` để các `PC` có thể ping lẫn nhau
+> 
+> - Hiển thị `running configuration` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
