--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/1.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/1.md
@@ -42,7 +42,7 @@
    
    - [ ] Mô hình OSI
    
-   - [ ] Tất cả câu trên đều đúng
+   - [ ] Tất cả đều đúng
 
 4. Quá trình `TCP` trên một máy tính đánh dấu phân đoạn `TCP` là phân đoạn 1, và máy tính nhận sau đó xác nhận đã nhận phân đoạn 1 là một ví dụ về điều gì?
    
@@ -54,7 +54,7 @@
    
    - [ ] Mô hình OSI
    
-   - [ ] Tất cả câu trả lời đều đúng
+   - [ ] Tất cả đều đúng
 
 5. Quá trình của một `web server` thêm một `TCP header` vào nội dung của trang web, được thực hiện bằng cách thêm `IP header` và thêm `data-link header` và `trailer`, đó là ví dụ nào sau đây ?
    
@@ -64,7 +64,7 @@
    
    - [ ] Mô hình OSI
    
-   - [ ] Tất cả câu trả lời đều đúng
+   - [ ] Tất cả đều đúng
 
 ### Thuật ngữ đóng gói dữ liệu
 
@@ -96,166 +96,192 @@
 
 ### Tổng quan về LANs
 
-1. asd
+1. Trong mạng LAN của một văn phòng nhỏ, một số thiết bị người dùng kết nối LAN bằng cáp quang, trong khi một số người dùng thì kết nối không dây. Điều nào sau đây đúng về việc sử dụng kết nối Ethernet trong mạng LAN này ?
    
-   - [ ] asd
+   - [x] Chỉ thiết bị kết nối bằng cables là sử dụng Ethernet
    
-   - [ ] asd
+   - [ ] Chỉ thiết bị kết nối bằng wireless là sử dụng Ethernet
    
-   - [ ] asd
+   - [ ] Cả 2 thiết bị kết nối cables và wireless là sử dụng Ethernet
    
-   - [ ] asd
+   - [ ] Khôn có thiết bị nào sử dụng Ethernet
 
-2. asd
+2. Chuẩn Ethernet nào sau đây định nghĩa Gigabit Ethernet thông qua cáp UTP ? 
    
-   - [ ] asd
+   - [ ] 10GBASE-T
    
-   - [ ] asd
+   - [ ] 100BASE-T
    
-   - [ ] asd
+   - [x] 1000BASE-T
    
-   - [ ] asd
+   - [ ] Tất cả đều sai
 
 ### Xây dựng Ethernet LANs vật lý bằng UTP
 
-3. asd
+3. Câu nào sau đây đúng về cáp chéo Ethernet cho Fast Ethernet
    
-   - [ ] asd
+   - [ ] Pins `1` và `2` đảo ngược trên đầu kia của cáp
    
-   - [ ] asd
+   - [x] Pins `1` và `2` ở một đầu của cáp kết nối tới pins `3` và `6` trên đầu còn lại của cáp
    
-   - [ ] asd
+   - [ ] Pins `1` và `2` ở một đầu của cáp kết nối với pins `3` và `4` trên một đầu còn lại của cáp
    
-   - [ ] asd
+   - [ ] Cáp có thể dài tới 1000m để băng qua giữa các toà nhà
+   
+   - [ ] Tất cà đều sai
 
-4. asd
+4. Mỗi câu trả lời liệt kê 2 thiết bị sử dụng mạng `100BASE-T`. Nếu các thiết bị này kết nối bằng cáp Ethernet `UTP`, cặp thiết bị nào yêu cầu cáp `straight-through` (*chọn 3 kết quả*)
    
-   - [ ] asd
+   - [ ] PC và router
    
-   - [ ] asd
+   - [x] PC và switch
    
-   - [ ] asd
+   - [ ] Hub và switch
    
-   - [ ] asd
+   - [x] Router và hub
+   
+   - [x] Wireless access point (cổng Ethernet) và switch
 
 ### Xây dựng Ethernet LANs vật lý bằng Fiber
 
-5. asd
+5. Điều này sao đây là lợi thế của việc sử dụng `multimode fiber` cho liên kết `Ethernet` thay vì `UTP` hoặc `single-mode fiber`
    
-   - [ ] asd
+   - [ ] Để đạt được khoảng cách xa nhất có thể cho liên kết `single`
    
-   - [ ] asd
+   - [x] Mở rộng liên kết ra 100m trong khi vẫn giữ chi phí ban đầu thấp nhất có thể
    
-   - [ ] asd
+   - [ ] Để sử dụng kho modules `laser-based SFP/SFP+` hiện có
    
-   - [ ] asd
+   - [ ] Để sử dụng kho modules `LED-based SFP/SFP+` hiện có
 
 ### Gửi dữ liệu trên mạng Ethernet
 
-6. asd
+6. Câu nào nào sau đây đúng với thuật toán `CSMA/CS`
    
-   - [ ] asd
+   - [ ] Thuật toán không bao giờ cho phép xảy ra va chạm
    
-   - [ ] asd
+   - [x] Khi va chạm xảy ra, thuật toán xác định cách máy tính nhận thấy một vụ va chạm và cách khôi phục
    
-   - [ ] asd
+   - [ ] Thuật toán chỉ hoạt động trên 2 thiết bị cùng mạng Ethernet
    
-   - [ ] asd
+   - [ ] Tất cả đều sai
 
-7. asd
+7. Câu nào sau đây đúng với trường `Ethernet FCS`
    
-   - [ ] asd
+   - [ ] Ethernet sử dụng FCS để khôi phục lỗi
    
-   - [ ] asd
+   - [ ] Nó dài 2 byte
    
-   - [ ] asd
+   - [x] Nó nằm trong `Ethernet trailer`, không nằm trong `Ethernet header`
    
-   - [ ] asd
+   - [ ] Nó được sử dụng để mã hoá
 
-8. asd
+8. Câu nào sau đây đúng về định dạng của địa chỉ `Ethernet` (*chọn 3 câu trả lời*)
    
-   - [ ] asd
+   - [ ] Mỗi nhà sản xuất đặt code `OUI` duy nhất vào 2 bytes đầu tiên của địa chỉ
    
-   - [ ] asd
+   - [x] Mỗi nhà sản xuất đặt code `OUI` duy nhất vào 3 bytes đầu tiên của địa chỉ
    
-   - [ ] asd
+   - [x] Mỗi nhà sản xuất đặt code `OUI` duy nhất vào nửa đầu của địa chỉ
    
-   - [ ] asd
+   - [ ] Phần địa chỉ chứa code của nhà sản xuất gọi là `MAC`
+   
+   - [x] Phần địa chỉ chứa code của nhà sản xuất gọi là `OUI`
+   
+   - [ ] Phần địa chỉ chứa code của nhà sản xuất không có tên cụ thể
 
-9. asd
+9. Thuật ngữ nào sau đây mô tả địa chỉ Ethernet có thể sử dụng để gửi 1 frame được phân phối đến nhiều thiết bị trong mạng `LAN` (*chọn 2 đáp án*)
    
-   - [ ] asd
+   - [ ] Địa chỉ `Burned-in`
    
-   - [ ] asd
+   - [ ] Địa chỉ `Unicast`
    
-   - [ ] asd
+   - [x] Địa chỉ `Boardcast`
    
-   - [ ] asd
+   - [x] Địa chỉ `Multicast`
 
 ## 3. Cơ bản về WANs và IP routing
 
 ### Mạng Wide-Area
 
-1. asd
+1. Cisco thêm trường nào sau đây trong tiêu đề HDLC được sử dụng bởi bộ định tuyến Cisco, ngoài HDLC tiêu chuẩn ISO?
    
-   - [ ] asd
+   - [ ] Flag
    
-   - [ ] asd
+   - [x] Type
    
-   - [ ] asd
+   - [ ] Andress
    
-   - [ ] asd
+   - [ ] FCS
 
-2. asd
+2. Cho hai router: R1 và R2 kết nối với nhau bằng Ethernet thông qua dịch vụ `MPLS`. Dịch vụ này cung cấp `point to point` giữa chỉ 2 router với nhau, như layer 2 Ethernet. Câu nào sau đây đúng nhất về WAN (*chọn 2 đáp án*)
    
-   - [ ] asd
+   - [ ] `R1` sẽ kết nối với liên kết Ethernet vật lý, với đầu kia của cáp được kết nối với `R2`
    
-   - [ ] asd
+   - [x] `R1` sẽ kết nối với liên kết Ethernte vật lý, với đầu kia của cáp được kết nối tới thiết bị ở điểm của nhà dịch vụ `WAN` 
    
-   - [ ] asd
+   - [ ] `R1` sẽ chuyển tiếp khung `data-link` cho `R2` bằng cách sử dụng `HDLC header/trailer`  
    
-   - [ ] asd
+   - [x] `R1` sẽ chuyển tiếp khung `data-link` cho `R2` bằng cách sử dụng `Ethernet header/trailer`
 
 ### IP Routing
 
-3. asd
+3. Tưởng tượng một mạng với 2 router kết nối tiếp liên kết với nhau bằng `point to point HDLC`. Mỗi router có một Ethernet, với
    
-   - [ ] asd
+   - `PC1` chia sẻ mạng Ethernet với Router1 
    
-   - [ ] asd
+   - `PC2` chia sẻ mạng Ethernet với Router2
    
-   - [ ] asd
+   Khi `PC1` gửi dữ liệu tới `PC2`, câu nào sau đây là đúng
    
-   - [ ] asd
+   - [x] Router1 tách `Ethernet header/trailer` ra khỏi khung nhận của `PC1` và không bao giờ sử dụng lại
+   
+   - [ ] Router1 đóng gói khung Ethernet bên trong `HDLC header` và gửi khung cho `Router2`, giải nén khung Ethernet chuyển tiếp cho `PC2` 
+   
+   - [ ] Router1 tách `Ethernet header/trailer` ra khỏi khung nhận của `PC1` và được Router2 tạo lại trước khi chuyển tiếp tới `PC2`
+   
+   - [ ] Router1 gỡ bỏ Ethernet, IP và TCP `headers` và tạo lại các `headers` thích hợp trước khi chuyển tiếp packet cho Router2
 
-5. asd
+4. Router thường sử dụng cách nào để đưa ra quyết định về việc routing gói `TCP/IP`
    
-   - [ ] asd
+   - [ ] Địa chỉ MAC đích
    
-   - [ ] asd
+   - [ ] Địa chỉ MAC nguồn
    
-   - [ ] asd
+   - [x] Địa chỉ IP đích
    
-   - [ ] asd
+   - [ ] Địa chỉ IP nguồn
+   
+   - [ ] Địa chỉ MAC và IP đích
 
-6. asd
+5. Câu nào sau đây đúng về một Host `TCP/IP` được kết nối bằng mạng `LAN` và IP-routing ? 
    
-   - [ ] asd
+   - [ ] Host luôn gửi packet tới default gateway
    
-   - [ ] asd
+   - [ ] Host không bao giờ gửi packet tới default gateway
    
-   - [ ] asd
+   - [x] Host gửi packets tới default gateway nếu địa chỉ IP đích nằm trong subnet khác với Host
    
-   - [ ] asd
+   - [ ] Host gửi packets tới default gateway nếu địa chỉ IP đích nằm cugn2 subnet với Host
+
+6. Chức năng nào sau đây là của giao thức `routing` (*chọn 2 đáp án*)
+   
+   - [x] Quảng cáo các routers đã biết cho các routers lân cận
+   
+   - [ ] Học tập routers cho các subnets được kết nối trực tiếp với router
+   
+   - [ ] Học tập outers đưa các routers đó vào `route table` cho `routes advetised` được đánh dấu bởi các bộ router lân cận
+   
+   - [ ] Chuyển tiếp `IP packets` dựa trên gói địa chỉ IP đích
 
 ### Chức năng layer mạng khác
 
-7. asd
+7. Một công ty muốn triển khai mạng `TCP/IP`, với `PC1` nằm trên mạng Ethernet LAN, giao thức và tính năng nào sao đây yêu cầu `PC1` tìm hiểu thông tin từ các máy chủ khác ? 
    
-   - [ ] asd
+   - [ ] ARP
    
-   - [ ] asd
+   - [ ] ping
    
-   - [ ] asd
+   - [x] DNS
    
-   - [ ] asd
+   - [ ] Tất cả đều sai
